pom update and cleanup